--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="css/libs.min.css"/>
     <link rel="stylesheet" href="css/style.min.css"/>
-    <title>name</title>
+    <title>Test</title>
   </head>
   <body>
     <section class="q-price">
@@ -41,8 +41,6 @@
       </div>
     </section>
     <footer></footer>
-    <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
-  <!-- END CODE HERE <===-->
 </html>
